crates/solverforge-macros/tests/ui/fail/planning_entity_tuple_struct.rs
use solverforge_macros::planning_entity;

#[planning_entity]
struct Task(String);

fn main() {}
